fix card alignment in modal

--- a/src/app/components/card-modal/card-modal.component.scss
+++ b/src/app/components/card-modal/card-modal.component.scss
@@ -12,7 +12,6 @@
 }
 
 .card-wrapper {
-  right: 22px;
   position: relative;
   margin-bottom: 30px;
 }
